# FC-Tools

./: add-viewbox.py  pyproject.toml
cli/add-viewbox/: __main__.py
cli/svg2bgrdf/: __main__.py
fmtools/: settings.py
fmtools/bondgraph/: classifier.py  labels.py  line_finder.py  maker.py
fmtools/cellml/: __init__.py
fmtools/shapes/: __init__.py
fmtools/svg/: __init__.py  definitions.py  styling.py
fmtools/svg/geometry/: utils.py
fmtools/utils/: __init__.py  colours.py
src/bvctools/: add-viewbox.py  svg2bgrdf.py
src/bvctools/bondgraph/: __init__.py  namespaces.py
src/bvctools/rdf/: __init__.py
src/bvctools/svg/: __init__.py  source.py
src/bvctools/svg/geometry/: arc_to_bezier.py  transform.py
src/bvctools/svg/shapes/: __init__.py  bondgraph.py  classifier.py  connections.py  labels.py  line_finder.py  utils.py
src/bvctools/utils/: treelist.py
